# stm32f4-template-macos

./: CMakeLists.txt  README.md
STM32-base/linker/: common.ld
STM32-base/startup/: startup_common.s
cmake/: ArmToolchain.cmake
src/: main.c
